name:                App
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Victor Hernandes Silva Maia
maintainer:          srvictormaia@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     App, App.Gloss
  other-extensions:    ScopedTypeVariables
  build-depends:       
    base         >=4.8  && <4.9,
    gloss        >= 1.9 && <1.10,
    gloss-raster >= 1.9 && <1.10,
    linear       >=1.20 && <1.21, 
    repa         >=3.4  && <3.5, 
    Image        >= 0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  
