name:                Image
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              
maintainer:          
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Image, Pixel
  -- other-modules:       
  other-extensions:    RankNTypes, ViewPatterns, TypeFamilies, TemplateHaskell, MultiParamTypeClasses
  build-depends:       
    base >=4.8 && <4.9, 
    linear >=1.20 && <1.21, 
    repa >=3.4 && <3.5, 
    vector >=0.10 && <0.11, 
    vector-th-unbox >=0.2 && <0.3, 
    Range >=0.1 && <0.2, 
    Terminal >= 0.1 && < 0.2,
    repa-io >= 3.4 && < 3.5,
    bytestring >= 0.10 && < 0.11, 
    base64-bytestring >= 1.0 && < 1.1,
    JuicyPixels >=3.2 && <3.3,
    JuicyPixels-util >=0.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
